[metadata]
name = some
version = 0.1.0
description = More than less; less than more.
long_description = file: README.md
long_description_content_type = text/markdown
author = Josh Holland
author_email = anowlcalledjosh@gmail.com
url = https://github.com/anowlcalledjosh/some
license = MIT
license_file = LICENSE
keywords = pager
classifiers =
    Environment :: Console
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[options]
py_modules = some
python_requires = >=3.6

[options.entry_points]
console_scripts =
    some = some:main
