[metadata]
name = some
description = More than less; less than more.
long_description = file: README.md
long_description_content_type = text/markdown
author = Ash Holland
author_email = ash@sorrel.sh
url = https://github.com/sersorrel/some
license = EUPL-1.2
license_file = LICENSE
keywords = pager
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[options]
py_modules = some
python_requires = >=3.6
setup_requires =
    setuptools-scm[toml] >= 3.5

[options.entry_points]
console_scripts =
    some = some:main
